--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.3.0",
     "axios": "^0.19.2",
+    "dropdownlist": "^0.1.1",
     "html-react-parser": "^0.10.3",
     "jest-environment-jsdom-sixteen": "^1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-dropdown": "^1.7.0",
+    "react-dropdown-select": "^4.5.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
